--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,99 @@
+:root {
+  --text-color: #9c898c;
+  --primary-color: #d4ccdc;
+  --secondary-color: #e8e8f1;
+  --secondary-text-color: #8e45a9;
+}
+.App,
+.Weather {
+  font-family: "Roboto, Sans Family";
+}
+.App h3 {
+  text-align: center;
+  font-size: 15px;
+  color: var(--text-color);
+  line-height: 15px;
+}
+.App header {
+  font-size: 50px;
+  text-align: center;
+  margin-top: 10px;
+  color: #e9e0dd;
+}
 .App {
+  background: #d4ccdc;
+  max-width: 800px;
+  background-size: cover;
+  height: 100%;
+  padding: 20px;
+}
+.Weather {
+  height: 100%;
+  background-color: #e8e8f1;
+  border: 1px solid var(--text-color);
+}
+.tempLogo {
+  font-size: 60px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.placeInfo {
+  color: var(--text-color);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.city {
+  font-size: 50px;
+  line-height: 40px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.time {
+  font-size: 10px;
+}
+.time li {
+  line-height: 10px;
+}
+.mainInfo {
+  background-color: rgba(227, 217, 218, 0.5);
+  color: #9c898c;
+  border: 1px, solid, var(--secondary-text-color);
+  border-radius: 4px;
+}
+.weatherDescribe {
+  color: var(--text-color);
+}
+form {
+  max-width: 100%;
+}
+.textBox {
+  width: 70%;
+  color: var(--text-color);
+}
+.searchButton {
+  width: 20%;
   color: white;
+  background-color: var(--text-color);
+  border: 1px solid white;
+}
+.searchButton:hover {
+  color: var(--text-color);
+  background-color: white;
+  border: solid, 2px, var(--text-color);
+}
+.temp {
+  font-size: 32px;
+  border-right: 1px solid var(--secondary-text-color);
 }
 
-.App-link {
-  color: #61dafb;
+ul {
+  margin-left: -32px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li {
+  list-style-type: none;
+}
+footer {
+  color: var(--secondary-text-color);
+  font-size: 16px;
+}
+footer a {
+  color: var(--secondary-text-color);
+}
+footer a:hover {
+  color: white;
 }
